--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					</div>
 					<div class="form-group">
 						<label for="description">Compaign description</label>
-						<textarea class="form-control" id="description" rows="3" name="description" required=""></textarea>
+						<textarea class="form-control" id="description" rows="10" name="description" required=""></textarea>
 					</div>
 					<div class="card" style="margin-bottom: 1rem;">
 						<div class="card-body">
@@ -350,4 +350,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/sweetalert2@7.0.9/dist/sweetalert2.all.js"></script>
+<script src="https://cdn.ckeditor.com/ckeditor5/1.0.0-alpha.2/classic/ckeditor.js"></script>
 <script src="./app.js"></script>
