+ add datetime picker in form add compaign

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://realtcrm.com/assets/css/bootstrap-datetimepicker.min.css">
 		<link href="./custom.css" rel="stylesheet">
 		<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter46957605 = new Ya.Metrika({ id:46957605, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/46957605" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 	</head>
@@ -79,7 +80,7 @@
 					</div>
 					<div class="form-group">
 						<label for="end_data">End date</label>
-						<input type="date" class="form-control" id="end_data" name="end_data" required="">
+						<input type="text" class="form-control" id="end_data" name="end_data" required="">
 					</div>
 					<!--<div class="form-group">
 						<label class="custom-file">
@@ -351,4 +352,5 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/sweetalert2@7.0.9/dist/sweetalert2.all.js"></script>
 <script src="https://cdn.ckeditor.com/ckeditor5/1.0.0-alpha.2/classic/ckeditor.js"></script>
+<script src="https://realtcrm.com/assets/js/bootstrap-datetimepicker.min.js"></script>
 <script src="./app.js"></script>
