--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav mr-auto">
 							<li class="nav-item active">
-								<button class="btn btn-success my-2 my-sm-0" id="projects_call_btn">Projects</button>
+								<button class="btn btn-success my-2 my-sm-0" id="projects_call_btn"><span class="icon-file-text"></span> Projects</button>
 							</li>
 							<li class="nav-item">
-								<button class="btn btn-success my-2 my-sm-0" id="create_campaign_call_btn">Create campaign!</button>
+								<button class="btn btn-success my-2 my-sm-0" id="create_campaign_call_btn"><span class="icon-file-text2"></span> Create campaign!</button>
 							</li>
 						</ul>
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<button class="btn btn-success my-2 my-sm-0" id="my_assets_call_btn">My assets</button>
+								<button class="btn btn-success my-2 my-sm-0" id="my_assets_call_btn"><span class="icon-file-text2"></span> My assets</button>
 							</li>
 							<li class="nav-item">
-								<button class="btn btn-primary my-2 my-sm-0" id="about_golosico_call_btn">About</button>
+								<button class="btn btn-primary my-2 my-sm-0" id="about_golosico_call_btn"><span class="icon-info"></span> About</button>
 							</li>
 							<li class="nav-item">
-								<a class="btn btn-info my-2 my-sm-0" target="_blank" href="https://testnet.golos.io">Testnet</a>
+								<a class="btn btn-info my-2 my-sm-0" target="_blank" href="https://testnet.golos.io"><span class="icon-lab"></span> Testnet</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico">GitHub</a>
+								<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico"><span class="icon-github"></span> GitHub</a>
 							</li>
 						</ul>
 					</div>
@@ -113,7 +113,7 @@
 						<div class="card-body">
 							<h4 class="card-title">Socials</h4>
 							<div class="form-row" style="margin-bottom: 1rem;">
-								<div class="col-4">
+								<div class="col-2">
 									<label class="sr-only">Social:</label>
 									<select class="form-control" name="social_type[]">
 										<option selected>Choose social...</option>
@@ -123,12 +123,12 @@
 										<option value="google">Google+</option>
 									</select>
 								</div>
-								<div class="col-7">
+								<div class="col-8">
 									<label class="sr-only">Url:</label>
 									<input type="text" class="form-control" name="social[]" placeholder="http://...">
 								</div>
-								<div class="col-1">
-									<button type="button" class="btn btn-primary" id="social-add-btn">Add</button>
+								<div class="col-2">
+									<button type="button" class="btn btn-primary" id="social-add-btn"><span class="icon-plus"></span> Add</button>
 								</div>
 							</div>
 						</div>
@@ -150,7 +150,7 @@
 							</div>
 						</div>
 					</div>
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button type="submit" class="btn btn-primary"><span class="icon-plus"></span> Submit</button>
 				</form>
 			</div>
 			<br>
@@ -272,7 +272,7 @@
 								<label for="login">Username:</label>
 								<input type="text" class="form-control" id="login" name="login" aria-describedby="emailHelp" placeholder="Enter your login @golos" required="" value="">
 							</div>
-							<button type="submit" class="btn btn-primary">Get information</button>
+							<button type="submit" class="btn btn-primary"><span class="icon-info"></span> Get information</button>
 						</form>
 					</div>
 				</div>
