--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						</ul>
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<button class="btn btn-success my-2 my-sm-0" id="my_assets_call_btn"><span class="icon-file-text2"></span> My assets</button>
+								<button class="btn btn-success my-2 my-sm-0" id="my_assets_call_btn"><span class="icon-credit-card"></span> My assets</button>
 							</li>
 							<li class="nav-item">
 								<button class="btn btn-primary my-2 my-sm-0" id="about_golosico_call_btn"><span class="icon-info"></span> About</button>
